--- a/sigedo/sigedo/src/main/webapp/pages/security/login.xhtml
+++ b/sigedo/sigedo/src/main/webapp/pages/security/login.xhtml
@@ -9,7 +9,8 @@
     </h:head>
 
     <h:body>
-	    <h:form>
+	    <h:form prependId="false">
+                <p:growl for="securityMessages"  globalOnly="true" showDetail="true" showSummary="false" />	
 	    	<p:spacer height="50"></p:spacer>
 	    	<div class="p-grid p-ai-center vertical-container">
 			    <div class="p-col">
